--- a/beamerthemeICTEAMposter.sty
+++ b/beamerthemeICTEAMposter.sty
@@ -143,7 +143,7 @@
     \begin{flushleft}
     \vskip-1cm
     \begin{tikzpicture}[remember picture,overlay]
-      \shade [inner color=gray,outer color=white]
+      \shade [inner color=UCLouvainBleuGris, outer color=white]
       (0,0) rectangle (\textwidth,0.3cm);
     \end{tikzpicture}
     \end{flushleft}
