--- a/beamerthemeICTEAMposter.sty
+++ b/beamerthemeICTEAMposter.sty
@@ -112,10 +112,18 @@
 \setbeamertemplate{headline}{
  \leavevmode
   \begin{columns}
-   \begin{column}{0.2\linewidth}
-     \includegraphics[width=\textwidth]{UCLouvain.jpg}
+   \begin{column}{0.3\linewidth}
+     \includegraphics[height=10cm]{UCLouvain.png}
    \end{column}
-   \begin{column}{0.6\linewidth}
+   \begin{column}{0.48\linewidth}
+   \end{column}
+   \begin{column}{0.3\linewidth}
+     \includegraphics[height=8cm]{ICTEAM.png}
+   \end{column}
+  \end{columns}
+  \vspace{-2cm}
+  \begin{columns}
+   \begin{column}{\linewidth}
     \vskip1cm
     \centering
     \usebeamercolor{title in headline}{\color{UCLouvainBleuNuit}\Huge{\textbf{\inserttitle}}\\[0.5ex]}
@@ -123,10 +131,6 @@
     \usebeamercolor{institute in headline}{\color{fg}\large{\insertinstitute}\\[1ex]}
     \vskip1cm
    \end{column}
-   \begin{column}{0.2\linewidth}
-     \includegraphics[width=\textwidth]{ICTEAM.png}
-   \end{column}
-   \vspace{1cm}
   \end{columns}
  \vspace{0.5in}
  \hspace{0.5in}\begin{beamercolorbox}[wd=35in,colsep=0.15cm]{cboxb}\end{beamercolorbox}
