Add ICTEAM color and use it inctead of UCLouvainEPLIC

--- a/beamerthemeICTEAMposter.sty
+++ b/beamerthemeICTEAMposter.sty
@@ -39,6 +39,8 @@
 \definecolor{UCLouvainCyan}{RGB}{ 93, 179, 230}
 \definecolor{UCLouvainBleuGris}{RGB}{156, 183, 212}
 
+\definecolor{ICTEAM}{RGB}{65, 143, 222}
+
 \definecolor{UCLouvainMEDE}{RGB}{136,   0,  93}
 \definecolor{UCLouvainTECO}{RGB}{181,   0,  48}
 \definecolor{UCLouvainDRT}{RGB}{226,   0,  38}
@@ -69,7 +71,7 @@
 \setbeamercolor{item projected}{fg=white,bg=UCLouvainBleuGris}
 
 % set colors for blocks
-\setbeamercolor{block title}{fg=UCLouvainEPLIC, bg=white}
+\setbeamercolor{block title}{fg=ICTEAM, bg=white}
 \setbeamercolor{block body}{fg=black,bg=white}
 
 % set colors for alerted blocks (blocks with frame)
