Update UCLouvain logo

--- a/beamerthemeICTEAMposter.sty
+++ b/beamerthemeICTEAMposter.sty
@@ -121,7 +121,7 @@
  \leavevmode
   \begin{columns}
    \begin{column}{0.3\linewidth}
-     \includegraphics[height=10cm]{UCLouvain.png}
+     \includegraphics[height=10cm]{UCLouvain_Institut_ICTEAM.eps}
    \end{column}
    \begin{column}{0.48\linewidth}
    \end{column}
