--- a/ICTEAM-poster.tex
+++ b/ICTEAM-poster.tex
@@ -59,7 +59,7 @@
 
 \begin{column}{\onecolwid} % The first column
   \begin{block}{ICTEAM institute}
-  \begin{alertblock}{What does ICTEAM stands for ?}
+  \begin{alertblock}{What does ICTEAM stand for ?}
     Information and Communication Technologies, Electronics and Applied Mathematics
   \end{alertblock}
 
