--- a/beamerthemeICTEAMposter.sty
+++ b/beamerthemeICTEAMposter.sty
@@ -126,7 +126,7 @@
    \begin{column}{0.48\linewidth}
    \end{column}
    \begin{column}{0.3\linewidth}
-     \includegraphics[height=8cm]{ICTEAM.png}
+     \includegraphics[height=8cm]{ICTEAM_pantone_279.eps}
    \end{column}
   \end{columns}
   \vspace{-2cm}
