Fix package name

--- a/beamerthemeICTEAMposter.sty
+++ b/beamerthemeICTEAMposter.sty
@@ -7,7 +7,7 @@
 % Modified by Nathaniel Johnston (nathaniel@nathanieljohnston.com) in August 2009
 % =============================================================================
 
-\ProvidesPackage{beamerthemeconfposter}
+\ProvidesPackage{beamerthemeICTEAMposter}
 \RequirePackage{tikz}		% for drawing the nice rounded boxes
 \usetikzlibrary{arrows,backgrounds}
 
